--- a/app/partials/phone-detail.html
+++ b/app/partials/phone-detail.html
@@ -1,12 +1,12 @@
-<img ng-src="{{phone.images[0]}}" class="phone">
+<img ng-src="{{mainImageUrl}}" class="phone">
 
 <h1>{{phone.name}}</h1>
 
 <p>{{phone.description}}</p>
-
+<p><button ng-click="hello('Elmo')">Hello</button>
 <ul class="phone-thumbs">
   <li ng-repeat="img in phone.images">
-    <img ng-src="{{img}}">
+    <img ng-src="{{img}}" ng-click="setImage(img)">
   </li>
 </ul>
 
